--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/Details.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/Details.cshtml
@@ -68,7 +68,7 @@
                         </ul>
                     </dd>
                     @Html.ActionLink("Download", "Download", new { fileName = @Model.minhChung })
-
+                    <lable>Tải file về để xem rõ hơn</lable>
                 </dl>
             </div>
         </div>
