--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/CreateBV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/CreateBV.cshtml
@@ -8,7 +8,7 @@
 
 <h2>Thêm bệnh viện</h2>
 
-@using (Html.BeginForm("CreateBV", "BenhVien", FormMethod.Post ))
+@using (Html.BeginForm("CreateBV", "BenhVien", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -62,10 +62,11 @@
         <div class="form-group">
             <div class="col-md-10">
                 <label for="exampleFile" class="">Minh chứng</label>
-                @*@Html.EditorFor(model => model.minhChung, new
-                   { htmlAttributes = new { @class = "form-control-file", @name = "UploadedFile", @id = "exampleFile", @type = "file" } })*@
+                @Html.EditorFor(model => model.minhChung, new{ htmlAttributes = new { @class = "form-control-file", @name = "upfile", @id = "exampleFile", @type = "file" } })
+                @Html.ValidationMessageFor(model => model.minhChung, "", new { @class = "text-danger" })
 
-                 <input name="file" id="exampleFile" type="file" class="form-control-file">
+                 @* <input name="upfile" id="file" type="file" class="form-control-file" required>*@
+
             </div>
         </div>
 
