--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DotHienMau/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/DotHienMau/Index.cshtml
@@ -135,9 +135,14 @@
                             </button>
                         </td>
                         <td>
-                            @Html.ActionLink("Chỉnh sửa", "EditDHM", new { id = item.IdDHM }) |
-                            @Html.ActionLink("Chi tiết", "Details", new { id = item.IdDHM }) |
-                            @Html.ActionLink("Xóa", "DeleteDHM", new { id = item.IdDHM })
+                            <div class="mb-2 mr-2 dropright btn-group">
+                                <button type="button" aria-haspopup="true" aria-expanded="false" data-toggle="dropdown" class="mb-2 mr-2 dropdown-toggle btn btn-outline-alternate">Chọn</button>
+                                <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu" x-placement="right-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(105px, 0px, 0px);">
+                                    <button type="button" tabindex="0" class="dropdown-item pe-7s-pen"> @Html.ActionLink("Chỉnh sửa", "EditDHM", new { id = item.IdDHM })</button>
+                                    <button type="button" tabindex="0" class="dropdown-item pe-7s-news-paper"> @Html.ActionLink("Chi tiết", "Details", new { id = item.IdDHM })</button>
+                                    <button type="button" tabindex="0" class="dropdown-item pe-7s-trash">@Html.ActionLink("Xóa", "DeleteDHM", new { id = item.IdDHM })</button>                                
+                                </div>
+                            </div>                          
                         </td>
                     </tr>
                     i++;
