--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Shared/_LeftMenu.cshtml
@@ -1,35 +1,35 @@
 ﻿<div class="scrollbar-sidebar">
     <div class="app-sidebar__inner">
         <ul class="vertical-nav-menu">
-            <li class="app-sidebar__heading">Dashboards</li>
+            <li class="app-sidebar__heading">Hệ thống</li>
             <li>
-                <a href="/Admin/Home/index">
-                    <i class="metismenu-icon pe-7s-rocket"></i>
+                <a href="@Url.Action("index","Home")"  >
+                    <i class="metismenu-icon pe-7s-portfolio"></i>
                     Trang Chủ
                 </a>
             </li>
             <li class="app-sidebar__heading">Chức Năng Chính</li>
             <li>
-                <a href="/Admin/QuanLyTK/Index">
+                <a href="@Url.Action("Index","QuanLyTK")" >
                     <i class="metismenu-icon pe-7s-users"> </i>
                     Quản lý người dùng
                 </a>
             </li>
             <li>
-                <a href="/Admin/SanPham/Index">
+                <a href="@Url.Action("Index","DotHienMau")" >
                     <i class="metismenu-icon pe-7s-note2"></i>
                     Đợt hiến máu
                     <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
                 </a>
                 <ul>
                     <li>
-                        <a href="/Admin/DotHienMau/Index">
+                        <a href="@Url.Action("Index","DotHienMau")" >
                             <i class="metismenu-icon"></i>
                             Đăng bài
                         </a>
                     </li>
                     <li>
-                        <a href="/Admin/DKDHM/Index">
+                        <a href="@Url.Action("Index","DVTG")" >
                             <i class="metismenu-icon">
                             </i>Đơn vị tham gia
                         </a>
@@ -37,26 +37,21 @@
                 </ul>
             </li>
             <li>
-                <a href="/Admin/BenhVien/Index">
+                <a  href="@Url.Action("Index","BenhVien")" >
                     <i class="metismenu-icon pe-7s-display2"></i>
                     Bệnh viện
                 </a>
             </li>
             <li>
-                <a href="/Admin/DonHang/Index">
+                <a href="@Url.Action("Index","DVLK")">
                     <i class="metismenu-icon pe-7s-display2"></i>
                     Đơn vị liên kết
                 </a>
             </li>
             <li class="app-sidebar__heading">Chức năng khác</li>
-            <li>
-
-                <a href="#">
-                    <i class="metismenu-icon pe-7s-user"></i>
-                    Người dùng
-                </a>
+            <li>             
                 <a href="/LoginClient/Index">
-                    <i class="metismenu-icon pe-7s-display2"></i>
+                    <i class="metismenu-icon pe-7s-user"></i>
                     Trang người dùng
                 </a>
             </li>
