--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/CreateBV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/BenhVien/CreateBV.cshtml
@@ -3,12 +3,25 @@
 @{
     ViewBag.Title = "CreateBV";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
- 
+
 }
 
 <h2>Thêm bệnh viện</h2>
-
-@using (Html.BeginForm("CreateBV", "BenhVien", FormMethod.Post, new { enctype = "multipart/form-data" }))
+<script>
+    $(function () {
+        $('#AlertBox').removeClass('hide');
+        $('#AlertBox').delay(5000).slideUp(500);
+    });
+</script>
+<div class="panel-body">
+    @if (TempData["AlertMessage"] != null)
+    {
+        <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+            @TempData["AlertMessage"]
+        </div>
+    }
+</div>
+@using (Html.BeginForm("CreateBV", "BenhVien", FormMethod.Post, new { @enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -18,13 +31,10 @@
         <div class="form-group">
             <div class="col-md-10">
                 <label for="exampleText" class="">Tên bệnh viện</label>
-
                 @Html.EditorFor(model => model.TenBenhVien, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.TenBenhVien, "", new { @class = "text-danger" })
             </div>
         </div>
-
-
         <div class="form-group">
             <div class="col-md-10">
                 <label for="exampleText" class="">Email</label>
@@ -33,7 +43,6 @@
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             <div class="col-md-10">
                 <label for="exampleText" class="">Số điện thoại</label>
@@ -42,8 +51,6 @@
                 @Html.ValidationMessageFor(model => model.soDTBV, "", new { @class = "text-danger" })
             </div>
         </div>
-
-
         <div class="form-group">
             <div class="col-md-10">
                 <label for="exampleText" class="">Địa chỉ</label>
@@ -52,21 +59,14 @@
                 @Html.ValidationMessageFor(model => model.diaChi, "", new { @class = "text-danger" })
             </div>
         </div>
-        @*<div class="form-group">
-                <div class="col-md-10">
-                    <label for="exampleFile" class="">Minh chứng</label>
-                    @Html.EditorFor(model => model.minhChung, new
-                   { htmlAttributes = new { @class = "form-control-file", @name = "file", @id = "exampleFile", @type = "file" } })
-                </div>
-            </div>*@
+
         <div class="form-group">
             <div class="col-md-10">
                 <label for="exampleFile" class="">Minh chứng</label>
+                <input name="file" id="exampleFile" type="file" class="form-control-file">
+
                 @*@Html.EditorFor(model => model.minhChung, new{ htmlAttributes = new { @class = "form-control-file", @name = "upfile", @id = "exampleFile", @type = "file" } })
-                @Html.ValidationMessageFor(model => model.minhChung, "", new { @class = "text-danger" })*@
-
-                  <input name="file" id="exampleFile" type="file" class="form-control-file"  >
-
+                    @Html.ValidationMessageFor(model => model.minhChung, "", new { @class = "text-danger" })*@
             </div>
         </div>
 
